resources/theme.css
QMainWindow{
 background: %PRIMARY%;
}

QMainWindow::separator{
    width: 1px;
    background: %SECONDARY%;
}

/* MENU BAR STYLE */

QMenuBar{
     background: %PRIMARY%;
     color: #A9B7C6;
     font-family: Consolas;
     border-bottom: 1px solid %SECONDARY%;
     font-size: 12;
     padding: 2px;
}

QMenuBar::item:selected{
    background: #39435b;
    color: #afbece;
}

/* MENU DROPDOWN STYLE */

QMenu{
    background-color: %PRIMARY%;
    border: 2px solid %SECONDARY%;
    color: #A9B7C6;
    font-family: Consolas;
}

QMenu::item{
    background: transparent;
}

QMenu::item::selected{
    color: #afbece;
    background: #39435b;
}

/* TAB BAR STYLE */
QTabWidget#code_tabs::pane{
    border-top: 1px solid %SECONDARY%;
}

QTabWidget#code_tabs QTabBar::tab{
    background: %PRIMARY%;
    color: #A9B7C6;
    text-align: center;
    min-width: 10em;
    height: 24px;
    font-family: Consolas;
}

QTabWidget#code_tabs QTabBar::tab:selected{
    background: %HIGHLIGHTED%;
    border-bottom: 2px solid white;
}

QTabWidget#code_tabs QTabBar::close-button{
    image: url(%BASE_PATH%\resources\img\close_button.png);
}

QTabWidget#code_tabs QTabBar::close-button:hover{
    image: url(%BASE_PATH%\resources\img\close_button_hover.png);
}

/* Modal Dialog */

QWidget#modal{
    background: %PRIMARY%;
    border-top: 1px solid %SECONDARY%;
}

QWidget#modal > QLabel#header{
    color: #A9B7C6;
    font-family: Consolas;
    font-size: 12px;
}

QLineEdit#dialog_entry{
    background: %HIGHLIGHTED%;
    border: 2px solid %SECONDARY%;
    color: #A9B7C6;
    padding: 5px;
    max-width: 500px;
    font-family: Consolas;
}

/* Project Structure Dock */
QTreeView#project_structure{
    background: %PRIMARY%;
    color: #A9B7C6;
    font-family: Consolas;
    border: none;
    padding-top: 5px;
}

QTreeView#project_structure::branch{
    image: none;
}

QWidget#dock_title{
    background: %PRIMARY%;
    border-bottom: 1px solid %SECONDARY%;
}

QLabel#dock_title_label{
    background: %PRIMARY%;
    color: #A9B7C6;
    padding-top: 6px;
    padding-bottom: 7px;
    font-family: Consolas;
    border-bottom: 1px solid %SECONDARY%;
}

QDockWidget#project_structure{
    color: #A9B7C6;
    border: none;
}

QPushButton#dock_close{
    qproperty-icon: url(" ");
    qproperty-iconSize: 12px 12px;
    width: 12px;
    height: 12px;
    padding-right: 10px;
    background-color: %PRIMARY%;
    border: none;
    background-image: url(%BASE_PATH%\resources\img\close_button.png);
    background-position: center;
    background-repeat: no-repeat;
}

QPushButton#dock_close:hover{
    background-image: url(%BASE_PATH%\resources\img\close_button_hover.png);
}

/* Run Console Dock */
QPlainTextEdit#console{
    background: #111;
    border: none;
    padding: 10px;
    font-family: Consolas;
    color: #A9B7C6;
}

